feat: Setup controllers, create phonenumbers table
